--- a/css.css
+++ b/css.css
@@ -11,7 +11,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('images/pane1.jpg') no-repeat;
+    background: url('pane1.jpg') no-repeat;
     background-position: center;
     background-size: cover;
 }
